src/Styles/callout.css
/* ... */
body.is-phone .workspace-leaf-content[data-tbar-position="top"] .view-header {
    margin-top: var(--ntb-tbar-top-header-mt-phone);
    padding-top: var(--ntb-tbar-top-header-pt-phone);
}

/* fixes header div getting squished when the toolbar's at the top position */
/* .view-header:has(+ [data-tbar-position="top"]) {
    min-height: var(--header-height);
} */

/* removes padding above the top navigation, when Obsidian's Floating navigation setting is disabled */
/* .is-phone .view-header:has(+ [data-tbar-position="top"]) {
    padding-top: 0;
} */

/* removes safe area inset from these variables, as it's taken into account above the toolbar */
body.is-phone .workspace-leaf-content[data-tbar-position="top"] .view-content {
    --view-top-fade-mask: var(--ntb-tbar-top-fade-mask);
    --view-top-spacing: var(--ntb-tbar-top-spacing);
    --view-top-spacing-markdown: var(--ntb-tbar-top-spacing-md);
}

.callout[data-callout="note-toolbar-output"] {
    background: none;
    background-color: var(--background-primary);
    background-image: unset;
    border: 4px dashed var(--background-secondary);
    margin: 0em;
    padding: 1em;
    & .callout-content {
        color: var(--background-secondary);       
    }
    & .callout-title {
        color: var(--background-secondary);
        display: inherit;
        text-transform: uppercase;
        & .callout-icon {
            display: none;
        }
        & .callout-title-inner {
            color: var(--background-secondary);
        }
    }
}

/* overrides Cupertino theme's background gradient */
body.mod-macos .callout.callout[data-callout='note-toolbar-output'] {
    background: none;
}
/* ... */

